---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { {} }, i64 } @_hl.main.1(i64 %0, i64 %1) {
alloca_block:
  %"0" = alloca { {} }, align 8
  %"1" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca i64, align 8
  %"4_0" = alloca { {} }, align 8
  %"4_1" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"5_1" = alloca i64, align 8
  %"12_0" = alloca { i32, { i64 }, { { {} } } }, align 8
  %"12_1" = alloca i64, align 8
  %"8_0" = alloca i64, align 8
  %"10_0" = alloca { i32, { i64 }, { { {} } } }, align 8
  %"08" = alloca { i32, { i64 }, { { {} } } }, align 8
  %"19" = alloca i64, align 8
  %"012" = alloca i64, align 8
  %"113" = alloca i64, align 8
  %"19_0" = alloca i64, align 8
  %"17_0" = alloca i64, align 8
  %"14_0" = alloca i64, align 8
  %"14_1" = alloca i64, align 8
  %"20_0" = alloca i64, align 8
  %"21_0" = alloca i64, align 8
  %"22_0" = alloca { i32, { i64 }, { { {} } } }, align 8
  %"023" = alloca { {} }, align 8
  %"124" = alloca i64, align 8
  %"27_0" = alloca { {} }, align 8
  %"28_0" = alloca { i32, { i64 }, { { {} } } }, align 8
  %"24_0" = alloca { {} }, align 8
  %"24_1" = alloca i64, align 8
  %"9_0" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, i64* %"2_0", align 4
  store i64 %1, i64* %"2_1", align 4
  %"2_01" = load i64, i64* %"2_0", align 4
  %"2_12" = load i64, i64* %"2_1", align 4
  store i64 %"2_01", i64* %"5_0", align 4
  store i64 %"2_12", i64* %"5_1", align 4
  br label %loop_body

loop_body:                                        ; preds = %20, %entry_block
  %"5_03" = load i64, i64* %"5_0", align 4
  %"5_14" = load i64, i64* %"5_1", align 4
  store i64 0, i64* %"8_0", align 4
  store i64 %"5_03", i64* %"5_0", align 4
  store i64 %"5_14", i64* %"5_1", align 4
  %"5_05" = load i64, i64* %"5_0", align 4
  %2 = insertvalue { i64 } undef, i64 %"5_05", 0
  %3 = insertvalue { i32, { i64 }, { { {} } } } { i32 0, { i64 } poison, { { {} } } poison }, { i64 } %2, 1
  store { i32, { i64 }, { { {} } } } %3, { i32, { i64 }, { { {} } } }* %"10_0", align 4
  %"10_06" = load { i32, { i64 }, { { {} } } }, { i32, { i64 }, { { {} } } }* %"10_0", align 4
  %"5_17" = load i64, i64* %"5_1", align 4
  %4 = extractvalue { i32, { i64 }, { { {} } } } %"10_06", 0
  switch i32 %4, label %5 [
    i32 1, label %8
  ]

5:                                                ; preds = %loop_body
  %6 = extractvalue { i32, { i64 }, { { {} } } } %"10_06", 1
  %7 = extractvalue { i64 } %6, 0
  store i64 %7, i64* %"012", align 4
  store i64 %"5_17", i64* %"113", align 4
  br label %cond_12_case_0

8:                                                ; preds = %loop_body
  %9 = extractvalue { i32, { i64 }, { { {} } } } %"10_06", 2
  %10 = extractvalue { { {} } } %9, 0
  store { {} } %10, { {} }* %"023", align 1
  store i64 %"5_17", i64* %"124", align 4
  br label %cond_12_case_1

loop_out:                                         ; preds = %23
  %"4_036" = load { {} }, { {} }* %"4_0", align 1
  %"4_137" = load i64, i64* %"4_1", align 4
  store { {} } %"4_036", { {} }* %"0", align 1
  store i64 %"4_137", i64* %"1", align 4
  %"038" = load { {} }, { {} }* %"0", align 1
  %"139" = load i64, i64* %"1", align 4
  %mrv = insertvalue { { {} }, i64 } undef, { {} } %"038", 0
  %mrv40 = insertvalue { { {} }, i64 } %mrv, i64 %"139", 1
  ret { { {} }, i64 } %mrv40

cond_12_case_0:                                   ; preds = %5
  %"014" = load i64, i64* %"012", align 4
  %"115" = load i64, i64* %"113", align 4
  store i64 2, i64* %"19_0", align 4
  store i64 1, i64* %"17_0", align 4
  store i64 %"014", i64* %"14_0", align 4
  store i64 %"115", i64* %"14_1", align 4
  %"14_116" = load i64, i64* %"14_1", align 4
  %"19_017" = load i64, i64* %"19_0", align 4
  %11 = mul i64 %"14_116", %"19_017"
  store i64 %11, i64* %"20_0", align 4
  %"14_018" = load i64, i64* %"14_0", align 4
  %"17_019" = load i64, i64* %"17_0", align 4
  %12 = sub i64 %"14_018", %"17_019"
  store i64 %12, i64* %"21_0", align 4
  %"21_020" = load i64, i64* %"21_0", align 4
  %13 = insertvalue { i64 } undef, i64 %"21_020", 0
  %14 = insertvalue { i32, { i64 }, { { {} } } } { i32 0, { i64 } poison, { { {} } } poison }, { i64 } %13, 1
  store { i32, { i64 }, { { {} } } } %14, { i32, { i64 }, { { {} } } }* %"22_0", align 4
  %"22_021" = load { i32, { i64 }, { { {} } } }, { i32, { i64 }, { { {} } } }* %"22_0", align 4
  %"20_022" = load i64, i64* %"20_0", align 4
  store { i32, { i64 }, { { {} } } } %"22_021", { i32, { i64 }, { { {} } } }* %"08", align 4
  store i64 %"20_022", i64* %"19", align 4
  br label %cond_exit_12

cond_12_case_1:                                   ; preds = %8
  %"025" = load { {} }, { {} }* %"023", align 1
  %"126" = load i64, i64* %"124", align 4
  store { {} } undef, { {} }* %"27_0", align 1
  %"27_027" = load { {} }, { {} }* %"27_0", align 1
  %15 = insertvalue { { {} } } undef, { {} } %"27_027", 0
  %16 = insertvalue { i32, { i64 }, { { {} } } } { i32 1, { i64 } poison, { { {} } } poison }, { { {} } } %15, 2
  store { i32, { i64 }, { { {} } } } %16, { i32, { i64 }, { { {} } } }* %"28_0", align 4
  store { {} } %"025", { {} }* %"24_0", align 1
  store i64 %"126", i64* %"24_1", align 4
  %"28_028" = load { i32, { i64 }, { { {} } } }, { i32, { i64 }, { { {} } } }* %"28_0", align 4
  %"24_129" = load i64, i64* %"24_1", align 4
  store { i32, { i64 }, { { {} } } } %"28_028", { i32, { i64 }, { { {} } } }* %"08", align 4
  store i64 %"24_129", i64* %"19", align 4
  br label %cond_exit_12

cond_exit_12:                                     ; preds = %cond_12_case_1, %cond_12_case_0
  %"010" = load { i32, { i64 }, { { {} } } }, { i32, { i64 }, { { {} } } }* %"08", align 4
  %"111" = load i64, i64* %"19", align 4
  store { i32, { i64 }, { { {} } } } %"010", { i32, { i64 }, { { {} } } }* %"12_0", align 4
  store i64 %"111", i64* %"12_1", align 4
  %"12_030" = load { i32, { i64 }, { { {} } } }, { i32, { i64 }, { { {} } } }* %"12_0", align 4
  %"12_131" = load i64, i64* %"12_1", align 4
  store { i32, { i64 }, { { {} } } } %"12_030", { i32, { i64 }, { { {} } } }* %"12_0", align 4
  store i64 %"12_131", i64* %"12_1", align 4
  %"5_032" = load i64, i64* %"5_0", align 4
  %"8_033" = load i64, i64* %"8_0", align 4
  %17 = icmp ule i64 %"5_032", %"8_033"
  %18 = select i1 %17, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  store { i32, {}, {} } %18, { i32, {}, {} }* %"9_0", align 4
  %"12_034" = load { i32, { i64 }, { { {} } } }, { i32, { i64 }, { { {} } } }* %"12_0", align 4
  %"12_135" = load i64, i64* %"12_1", align 4
  %19 = extractvalue { i32, { i64 }, { { {} } } } %"12_034", 0
  switch i32 %19, label %20 [
    i32 1, label %23
  ]

20:                                               ; preds = %cond_exit_12
  %21 = extractvalue { i32, { i64 }, { { {} } } } %"12_034", 1
  %22 = extractvalue { i64 } %21, 0
  store i64 %22, i64* %"5_0", align 4
  store i64 %"12_135", i64* %"5_1", align 4
  br label %loop_body

23:                                               ; preds = %cond_exit_12
  %24 = extractvalue { i32, { i64 }, { { {} } } } %"12_034", 2
  %25 = extractvalue { { {} } } %24, 0
  store { {} } %25, { {} }* %"4_0", align 1
  store i64 %"12_135", i64* %"4_1", align 4
  br label %loop_out
}
